# av_sim_testbench

./: .coverage  .gitignore  .output.txt  BUILD  CONTRIBUTING.md  README.md  WORKSPACE  build.bat  check_ci.bat  conftest.py  diff.txt  lint.bat  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.hypothesis/constants/: 004e722d2b39195a  033cea2e5cae6cf7  03a0bc33c3be41ac  03b98af37bac0540  041b82baf95116f0  0628f2618034526e  068c9e16d4886008  07475514dc0bbadb  09ae28b390a241d0  0cfa12dfbf9e9abb  0d7b5ddd0585c649  10d1155a56587e3a  110a1d1d892c7388  11a4fb9bf042a054  12e7e479072c853b  13ef1f90ca4c5389  13efa0910df75e7a  146ce438f76c65d3  1711dca7bbb78b0f  17e3f8cea4119fc7  18baa06439e76d96  1a5326b88fdd03ad  1b03421aacbc7cd8  1dc359315dc82348  1f4b62403fde35c2  1f8db60aae1bf885  219385b4acf67710  2196e604560785f8  22aee50d81961c02  23de3c8efc283fa6  2438213548c974ab  25878421010898fc  2f95c8527aa42db7  30ef0a2658953185  31722252d7529a88  32b05670edd550d5  34b1e5fc44bd44cd  368f19d2cc26015d  372ae7d00561b2ec  3a743c7455373446  (+123 more)
adapters/: BUILD  __init__.py  carla_adapter.py  legacy_adas.py
catalog/: BUILD  __init__.py  store.py
cpp/: BUILD  CMakeLists.txt  metrics_bridge.py  metrics_engine.cpp
docs/: carla_setup.md  legacy_vehicles.md
infra/: Dockerfile  Jenkinsfile  docker-compose.yml
metrics/: BUILD  __init__.py  scoring.py
ml/: BUILD  __init__.py  regression_detector.py
observability/: BUILD  __init__.py  logger.py  metrics_exporter.py
replay/: BUILD  __init__.py  regression.py
runner/: BUILD  __init__.py  distributed.py  engine.py
scenarios/: BUILD  __init__.py  generator.py  schema.py
scripts/: auto_lint.py  build_project.py  check_ci.py  install_carla_client.py  verify_carla.py
tests/: test_catalog.py  test_legacy_adas.py  test_metrics_scoring.py  test_ml_regression.py  test_properties.py  test_runner.py  test_scenario_generator.py
